# modu

./: README.md
.github/workflows/: build.yml  deploy.yml  rust.yml  test.yml
extensions/vscode/: modu-lang-1.10.0.vsix  modu-lang-1.2.1.vsix  modu-lang-1.2.2.vsix  modu-lang-1.3.0.vsix  modu-lang-1.3.1.vsix  modu-lang-1.4.0.vsix  modu-lang-1.4.1.vsix  modu-lang-1.5.0.vsix  modu-lang-1.6.0.vsix  modu-lang-1.7.0.vsix  modu-lang-1.8.0.vsix  modu-lang-1.9.0.vsix  package.json
extensions/vscode/syntaxes/: modu.tmLanguage.json
extensions/zed/: extension.toml
extensions/zed/grammars/: modu.wasm
ffi/: modu_ffi.h
ffi/rust_ffi/: Cargo.toml  README.md  cbindgen.toml
ffi/rust_ffi/src/: lib.rs
lang/: .gitignore  Cargo.toml  LICENSE  README.md  test
lang/examples/: array.modu  benchmark.modu  bit_ops.modu  crypto.modu  file.modu  file_io.modu  fs.modu  http.modu  if_statements.modu  imports.modu  input.modu  json.modu  loops.modu  math.modu  multiline_comments.modu  nesting.modu  nesting_many_funcs.modu  objects.modu  oop.modu  oop_2.modu  os_package.modu  return_statements.modu  test.modu  time.modu  try_catch.modu  uuid.modu  variables.modu  write_file_with_os_pkg.modu  yapper.modu
lang/examples/ffi/: main.modu
lang/src/: ast.rs  eval.rs  evaulator.rs  functions.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs  utils.rs  validator.rs
lang/tests/: integration_tests.rs
modu-wasm/: Cargo.toml
modu-wasm/src/: lib.rs
web/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  vite.config.ts
web/src/: app.css  app.html
(+162 files in other folders)
